fix(location-page): category section overflowX

--- a/src/container/Location/Category/category.module.scss
+++ b/src/container/Location/Category/category.module.scss
@@ -7,4 +7,5 @@
   width: 100%;
   height: c.$S_LOCATION_CATEGORY_HEIGHT;
   padding: 8px c.$S_PAGE_HORIZONTAL_PADDING 16px;
+  overflow-x: scroll;
 }
